  - obsplus.DataFrameExtractor
    * Fixed a bug where objects with None attributes were being represented with
      'None' rather than '' when converted to str (see #99).
  - obsplus.datasets.crandall
    * Deleted EventDescriptions whose text was set to 'None' (see #99).
      NOTE: This change requires re-downloading the dataset to properly take
      effect!
  - obsplus.datasets.dataset
    * Renamed from obsplus.datasets.dataloader
    * Added a version numbering scheme to DataSet to enforce that the version of
      a downloaded dataset matches what is required by the DataSet.
  - obsplus.waveforms
    * Utils.merge_traces now does some quick checks and simply returns the
      input stream when no merging is the be performed (#97).
    * Utils.stream_bulk_split now accepts unix style matching for the string
      arguments (#97).
  - obsplus.stations
    * Added utility for converting a simple station dataframe into an
      inventory (#98).
  - testing
    * Added stream_tester fixture which returns a testing class for common
      stream tests, like testing is streams are almost equal (#97).


obsplus 0.0.1:
  - obsplus.bank
    * Speed up wavebank reads of file segments by passing start/end times
      to underlying obspy functions (see #34).
    * Speed up wavebank's get_waveforms and related methods by replacing
      obspy's merge/split with a pandas merge function (see #50).
    * Fixed issue #49 where traces with masked arrays could be returned from
      WaveBank's get_waveforms methods (see #50).
    * Added better error messages for trying to pull data from banks that do
      not exist (see #36)
    * Event bank eventid param can now accept numpy arrays (see 30).
    * Added basic file-locking mechanism for wavebank and multiprocessing
      tests (see #70).
    * Update_index methods now return the bank instance which allows chaining
      the update call with the init (see #83).
  - obsplus.waveforms