@@ -16,9 +16,14 @@ obsplus master:
       NOTE: This change requires re-downloading the dataset to properly take
       effect!
   - obsplus.datasets.dataset
-    * Renamed from obsplus.datasets.dataloader
+    * Renamed from obsplus.datasets.dataloader (#100)
     * Added a version numbering scheme to DataSet to enforce that the version of
-      a downloaded dataset matches what is required by the DataSet.
+      a downloaded dataset matches what is required by the DataSet (#100).
+    * Changed where the datasets are stored. By default they will be stored in
+      a directory called obspdata in the users home, but this can be changed
+      using an environmental variable (#100).
+    * Removed Dataset.Path attribute and added Dataset.download_path and
+      dataset.source_path since the two are now different (#100).
   - obsplus.waveforms
     * Utils.merge_traces now does some quick checks and simply returns the
       input stream when no merging is the be performed (#97).
